dns-config/services/argocd.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`argocd.home.lanegoolsby.com`)
    kind: Rule
    services:
    - name: argocd-server
      namespace: argocd
      port: 443
  tls:
    insecureSkipVerify: true
