dns-config/services/hello-world.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`hello-world.home.lanegoolsby.com`)
    kind: Rule
    services:
    - name: hello-world
      namespace: hello-world
      port: 80
      kind: Service
  tls: {}
