dns-config/services/home-assistant.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`homeassistant.home.lanegoolsby.com`)
    kind: Rule
    services:
    - name: home-assistant
      namespace: home-assistant
      port: 8123
  tls: {}
