dns-config/services/infra.yaml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: argo-ingress
#   namespace: argocd
# spec:
#   entryPoints:
#   - websecure
#   routes:
#   - match: Host(`argocd.home.lanegoolsby.com`)
#     kind: Rule
#     services:
#     - name: svc/argocd-server
#       namespace: argocd
#       port: 443
#       kind: Service
#   tls: {}
# ---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`traefik.home.lanegoolsby.com`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
  tls: {}
