dns-config/services/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`traefik.home.lanegoolsby.com`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
  tls:
    secretName: wildcard-home-lanegoolsby-com-tls
